--- a/lib/premiere_ecoute_web/live/billboards/new_live.html.heex
+++ b/lib/premiere_ecoute_web/live/billboards/new_live.html.heex
@@ -1,5 +1,5 @@
 <Layouts.app flash={@flash} current_scope={assigns[:current_scope] || %{}}>
-  <div class="min-h-screen text-white" style="background-color: var(--color-dark-950);">
+  <div class="synthwave-gb min-h-screen text-white" style="min-height: calc(100vh - 5rem);">
     <div class="max-w-4xl mx-auto py-8 px-6">
       <!-- AIDEV-NOTE: Billboard creation header with progressive steps design -->
       <div class="mb-8">
