--- a/lib/premiere_ecoute_web/live/admin/admin_live.html.heex
+++ b/lib/premiere_ecoute_web/live/admin/admin_live.html.heex
@@ -36,7 +36,7 @@
                 d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
               />
             </svg>
-            Hello {gettext("Sentry Dashboard")}
+            Sentry
             <svg class="w-3 h-3 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path
                 stroke-linecap="round"
@@ -60,7 +60,7 @@
                 d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
               />
             </svg>
-            {gettext("Grafana Dashboard")}
+            Grafana
             <svg class="w-3 h-3 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path
                 stroke-linecap="round"
@@ -107,7 +107,7 @@
       <StatsCard.stats_card icon="hero-hand-thumb-up" value={@stats.votes_count} label={gettext("Votes")} color="purple" />
       
 <!-- Polls Card -->
-      <StatsCard.stats_card icon="hero-chart-bar" value={@stats.polls_count} label={gettext("Polls")} color="orange" />
+      <StatsCard.stats_card icon="hero-chart-bar" value={@stats.billboards_count} label={gettext("Billboards")} color="orange" />
     </div>
     
 <!-- Event Store Section -->
